# rapidfuzz-collections

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: DESIGN.md  README.md  baseline_benchmark.py  datasets.py  hot_path_benchmark.py  index_strategy_benchmark.py  real_data_benchmark.py  run_hot_path_benchmark.py  run_index_strategy_benchmark.py  run_index_strategy_exact_tie_benchmark.py  run_index_strategy_facade_smoke_benchmark.py  run_index_strategy_final_extended_benchmark.py  run_index_strategy_final_narrow_benchmark.py  run_index_strategy_full_result_benchmark.py  run_index_strategy_large_benchmark.py  run_index_strategy_sequence_benchmark.py  run_index_strategy_weighted_benchmark.py  runner_args.py  utils.py
benchmarks/reports/: README.md
examples/: README.md  bulk_publication_lookup_with_cdist.py  catalog_lookup_with_fuzzy_dict.py  database_ids_with_keyed_index.py  dataset_utils.py  mutable_reference_data.py  ordered_list_cleanup_with_fuzzy_list.py  record_lookup_with_sequence_index.py  reference_data_normalization_with_fuzzy_dict.py  vocabulary_lookup_with_fuzzy_set.py
examples/data/: NOTICE.md
examples/data/dirty_dblp_acm/: test.csv
scripts/: check_package.py
src/rapidfuzz_collections/: __init__.py  configuration.py  enums.py  matching.py  normalization.py
tests/: README.md  data.py  helpers.py  test_batch_cdist.py  test_benchmark_infrastructure.py  test_data_fixtures.py  test_examples.py  test_frozen_fuzzy_dict.py  test_frozen_fuzzy_dict_compatibility.py  test_frozen_fuzzy_set.py  test_frozen_fuzzy_set_compatibility.py  test_fuzzy_dict.py  test_fuzzy_dict_compatibility.py  test_fuzzy_dict_keyed_strategy.py  test_fuzzy_list.py  test_fuzzy_list_compatibility.py  test_fuzzy_set.py  test_fuzzy_set_compatibility.py  test_fuzzy_set_keyed_strategy.py  test_fuzzy_tuple.py  test_fuzzy_tuple_compatibility.py  test_keyed_index.py  test_normalization.py  test_per_query_overrides.py  test_public_api.py  test_randomized_compatibility.py  test_sequence_index.py  test_strategy_fuzzy_dict_set.py
(+11 files in other folders)
